# AI-Context-Studio

./: Avvia_AI_Context_Studio.bat  README.md  launcher.pyw  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/: __init__.py
src/ai_context_studio/: __init__.py  __main__.py  api_client.py  app.py  config.py  constants.py  custom_prompts.py  main.py  models.py  prompt_engine.py  scanner.py  token_estimator.py
src/ai_context_studio/config/: __init__.py  settings.py
src/ai_context_studio/core/: estimator.py  models.py  prompts.py  scanner.py
src/ai_context_studio/services/: gemini_client.py
src/ai_context_studio/ui/: __init__.py  app.py  event_queue.py  file_tree.py  panels.py  settings_tab.py  tabs.py  tooltip.py  utils.py  visualizer_tab.py
src/ai_context_studio/ui/components/: file_tree.py  panels.py
src/ai_context_studio/ui/tabs/: generator_tab.py  preview_tab.py  setup_tab.py
tests/: __init__.py  conftest.py  test_constants.py  test_models.py  test_scanner.py  test_token_estimator.py
tests/unit/: test_config.py  test_estimator.py  test_scanner.py
